# mmdr

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: test.py
python/mmdr/: __init__.py  __main__.py  _mmdr.pyi  diagram.py
src/: lib.rs
tests/: conftest.py  test_diagram.py  test_render.py  test_render_png.py
