[package]
name = "mmdr-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Mermaid rendering — two backends, all rasterization via resvg"
license = "MIT"

[lib]
name = "_mmdr"
crate-type = ["cdylib"]

[features]
default = ["backend-mermaid-rs", "backend-merman"]
backend-mermaid-rs = ["dep:mermaid-rs-renderer"]
backend-merman     = ["dep:merman"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }

# SVG backends (optional)
mermaid-rs-renderer = { version = "0.2.2", optional = true, default-features = false }
merman              = { version = "0.7.0",  optional = true, features = ["raster"] }

# Rasterization — always present, used by svg_to_png() and svg_to_raw()
# regardless of which SVG backend produced the string.
resvg = "0.47.0"
usvg  = "0.47.0"

[profile.release]
lto   = true
strip = true
