[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mmdr"
version = "0.1.0"
description = "Fast native Mermaid diagram rendering (Rust, via PyO3) - no browser required"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "1jehuang" }
]
keywords = ["mermaid", "diagram", "svg", "render", "rust"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/1jehuang/mermaid-rs-renderer"
Repository = "https://github.com/1jehuang/mermaid-rs-renderer"

# This makes `mmdr` available as a terminal command after `pip install mmdr`,
# same idea as mermaid-cli's `mmdc` command. It just calls main() in
# python/mmdr/__main__.py.
[project.scripts]
mmdr = "mmdr.__main__:main"

[tool.maturin]
# Cargo.toml is in this same folder.
manifest-path = "Cargo.toml"
# Pure-Python files (the public "mmdr" package: __init__.py, __main__.py, ...)
# live here. maturin copies the compiled extension into python/mmdr/ alongside them.
python-source = "python"
# The compiled extension is importable as mmdr._mmdr; python/mmdr/__init__.py
# re-exports the public functions from it so users just do `import mmdr`.
module-name = "mmdr._mmdr"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
minversion = "7.0"
# Add your source code directories to the Python search path
pythonpath = ["python"]
# Limit where pytest looks for test files to save time and prevent false positives
testpaths = ["tests"]